<resources>
    <string name="app_name">Guitar World</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>

    <string name="dynamic">动态</string>
    <string name="tools">工具</string>
    <string name="shop">商城</string>
    <string name="profile">我的</string>
    <string name="myProfile">我的资料</string>
    <string name="myWorks">我的作品</string>
    <string name="my_follower">我的粉丝</string>
    <string name="my_following">我的关注</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="hometown">居住地</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="timer">倒计时</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="network_error_message">对不起，网络开小差了QAQ</string>
    <string name="author">作者</string>
    <string name="create_time">创作时间</string>
    <string name="name">标题</string>
    <string name="content">内容</string>
    <string name="send">发送</string>
    <string name="logout">退出登录</string>
    <string name="publish">发布</string>
    <string name="discover">发现</string>
    <string name="search">搜索</string>
    <string name="add_following">+关注</string>
    <string name="followed">已关注</string>
    <string name="follow_each_other">互相关注</string>
    <string name="add_comment">评论</string>
    <string name="update">上传</string>
    <string name="take_photo">拍照</string>
    <string name="save_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="share">分享</string>
    <string name="like">赞</string>
    <string name="register_hint">还没有账号？点击注册</string>
    <string name="confirm_code">验证码</string>
    <string name="get_confirm_code">获取验证码</string>
    <string name="black_list">黑名单</string>
    <string name="music_name">音乐名称</string>
    <string name="music_profile">音乐简介</string>
    <string name="music_score_list">乐谱列表</string>
    <string name="music_teach_list">教学列表</string>
    <string name="music_show_list">表演列表</string>
    <string name="music_score_title">乐谱名称</string>
    <string name="music_score_author">乐谱作者</string>
    <string name="music_teach">音乐教学</string>
    <string name="music_show">作品展示</string>
    <string name="music_score">乐谱</string>
    <string name="music_author">音乐作者</string>
    <string name="update_video">上传视频</string>
    <string name="title">标题</string>
    <string name="job">工作</string>
    <string name="publish_dynamic">发动态</string>
    <string name="publish_video">发视频</string>
    <string name="detail">详情</string>
    <string name="image_detail">图片详情</string>
    <string name="comment">评论</string>
</resources>
