<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delegate.works.PublishDelegate"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="2"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/content"/>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <LinearLayout
        android:id="@+id/ll_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <Button
        android:id="@+id/bt_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"/>


</LinearLayout>