<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WorksDetailActivity"
    android:orientation="vertical">

    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/srl_refresh"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"/>

        <TextView
            android:id="@+id/tv_createTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_time"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"/>

        <android.support.v7.widget.RecyclerView
            android:background="@color/colorPrimary"
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"/>
    <!--</android.support.v4.widget.SwipeRefreshLayout>-->

</LinearLayout>