<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>
    <Button
        android:id="@+id/update_video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_video"/>

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <VideoView
        android:id="@+id/preview_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/publish_works"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"/>
</LinearLayout>